--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
   "dependencies": {
     "autoprefixer-loader": "^3.0.0",
     "availity-ekko": "1.3.0",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-3": "^6.5.0",
     "bless-webpack-plugin": "^1.0.0",
     "bluebird": "3.4.0",
     "bower-directory": "1.0.0",
@@ -57,6 +62,7 @@
     "del": "2.2.0",
     "eazy-logger": "2.1.3",
     "eslint": "^1.3.1",
+    "esprima": "^2.7.2",
     "exists-sync": "0.0.3",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.0",
@@ -107,8 +113,9 @@
     "shelljs": "0.7.0",
     "style-loader": "0.13.1",
     "update-notifier": "1.0.0",
-    "webpack": "1.13.1",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "^1.14.1",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "0.14.0",
     "yargs": "4.7.1"
